Fix/warning cleanup (#178)
* Remove unused static final RegistryAccess instance from ExperienceModifierRegistryTest

* Refactor RestedExperienceManagerTest to replace deprecated Map argument with anyMap matcher

* Remove unused World variable from SwordsTest class

* Remove unused McRPGDatabase reference and static id from McRPG class

* Remove unused parser classes and related code from the worldguard package

* Remove unused McRPG reference and replace ImmutableSet with Set in SkillRegistry

* Remove unused McRPG reference from ExperienceModifierRegistry constructor

* Remove redundant boolean variable in SpawnReasonModifier

* Remove unused block variable in ConfigurableOnBlockBreakLevelableComponent

* Remove unused damager variable and clean up experience calculation logic

* Remove ImmutableSet references and replace with Set in OreScannerBlockType and ReloadableOreScannerBlocks

* Remove unused MiniMessage references from ReloadPluginCommand, LinkChestCommand, and UnlinkChestCommand

* Remove unused Bukkit import from PlayerExperienceExtrasDAO

* Remove unused mcRPGPlayer variable from LoadoutAbilitySlot

* Replace ImmutableMap and ImmutableSet with Map and Set in OreScannerActivateEvent

* Remove ImmutableSet references and replace with Set in AbilityData, AbilityRegistry, and BaseAbility

* Remove unused Bukkit import from PlayerExperienceExtras

* Replace ImmutableSet with Set in NoLocalizationContainsMessageException

* Replace ImmutableSet with Set in McRPGContentPack

* Replace ImmutableSet with Set in AbilityHolder

* Update glowingEntities dependency version to 1.4.9

* Remove unused variables and imports in AbilityAttributeRegistry and AbilityTierAttribute

* Remove unused imports and replace ImmutableSet with Set in RemoteTransfer classes

* Replace ImmutableSet with Set in Quest and QuestManager classes

* Remove unused imports and variables in various components

* Remove unused variables and replace ImmutableList with List in various classes

* R